--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,11 @@
 fixtures:
   repositories:
-    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
-    concat: "git://github.com/puppetlabs/puppetlabs-concat.git"
-    apt: "git://github.com/puppetlabs/puppetlabs-apt.git"
+    stdlib: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
+    concat: 'git://github.com/puppetlabs/puppetlabs-concat.git'
+    apt: 'git://github.com/puppetlabs/puppetlabs-apt.git'
+    puppetdb: 'git@github.com:puppetlabs/puppetlabs-puppetdb.git'
+    inifile: 'git://github.com/puppetlabs/puppetlabs-inifile.git'
+    postgresql: 'git://github.com/puppetlabs/puppet-postgresql.git'
+    firewall: 'git://github.com/puppetlabs/puppetlabs-firewall.git'
   symlinks:
     gvpe: "#{source_dir}"
